# MPC-Trajectory-Tracking

./: README.md
GUI_ws/: gerkenna.bashrc  wifi.bashrc
GUI_ws/devel/: _setup_util.py  local_setup.sh  setup.sh
GUI_ws/devel/include/ugv_msgs/: IMU_calib.h  toGUI.h  toUGV.h
GUI_ws/devel/lib/gui_calib_imu/: gui_calib_imu
GUI_ws/devel/lib/gui_car/: gui_car
GUI_ws/devel/lib/pkgconfig/: gui_calib_imu.pc  gui_car.pc  ugv_msgs.pc
GUI_ws/devel/lib/python3/dist-packages/ugv_msgs/msg/: _IMU_calib.py  __init__.py  _toGUI.py  _toUGV.py
GUI_ws/devel/share/common-lisp/ros/ugv_msgs/msg/: IMU_calib.lisp  _package.lisp  _package_toGUI.lisp  _package_toUGV.lisp  toGUI.lisp  toUGV.lisp  ugv_msgs-msg.asd
GUI_ws/devel/share/gennodejs/ros/ugv_msgs/msg/: IMU_calib.js  _index.js  toUGV.js
GUI_ws/devel/share/gui_calib_imu/cmake/: gui_calib_imuConfig.cmake
GUI_ws/devel/share/gui_car/cmake/: gui_carConfig.cmake
GUI_ws/devel/share/roseus/ros/ugv_msgs/: manifest.l
GUI_ws/devel/share/roseus/ros/ugv_msgs/msg/: IMU_calib.l  toGUI.l
GUI_ws/devel/share/ugv_msgs/cmake/: ugv_msgs-msg-extras.cmake  ugv_msgs-msg-paths.cmake  ugv_msgsConfig.cmake
GUI_ws/path_data/create_path_file/: create_circle_path.m  create_eight_path.m  create_square.m  create_square_triangle.m
GUI_ws/src/gui_calib_imu/: CMakeLists.txt  package.xml
GUI_ws/src/gui_calib_imu/include/: mainwindow.h
GUI_ws/src/gui_calib_imu/resources/maps/: bachkhoa1.osm  pool.osm
GUI_ws/src/gui_calib_imu/resources/qml/: Compass.qml  map1.qml  map2.qml  my_map.qml
GUI_ws/src/gui_calib_imu/src/: mainwindow.cpp
GUI_ws/src/gui_calib_imu/ui/: mainwindow.ui
GUI_ws/src/gui_car/: CMakeLists.txt  package.xml
GUI_ws/src/gui_car/include/: main_window.h  matrix.h  q_node.h  trajectory_path.h
GUI_ws/src/gui_car/launch/: GUI.launch
GUI_ws/src/gui_car/resources/: map.qrc
GUI_ws/src/gui_car/resources/qml/: map.qml
GUI_ws/src/gui_car/src/: main.cpp  main_window.cpp  matrix.cpp  q_node.cpp  trajectory_path.cpp
GUI_ws/src/gui_car/ui/: main_window.ui
GUI_ws/src/ugv_msgs/: CMakeLists.txt
GUI_ws/src/ugv_msgs/msg/: IMU_calib.msg  toGUI.msg
Tu_ws/: wifi.bashrc
Tu_ws/devel/: local_setup.sh  setup.sh
Tu_ws/devel/include/ugv_msgs/: GPS.h  IMU.h
Tu_ws/devel/lib/calib_imu/: IMU_calib_node
Tu_ws/devel/lib/pkgconfig/: calib_imu.pc  tracking.pc  ugv_msgs.pc
Tu_ws/devel/lib/python3/dist-packages/ugv_msgs/msg/: _GPS.py  _IMU.py  _IMU_calib.py  __init__.py
Tu_ws/devel/lib/tracking/: GPS_node  IMU_node  controller_node
Tu_ws/devel/share/calib_imu/cmake/: calib_imuConfig.cmake
Tu_ws/devel/share/common-lisp/ros/ugv_msgs/msg/: GPS.lisp  IMU.lisp  IMU_calib.lisp  _package.lisp  _package_GPS.lisp  _package_IMU.lisp  _package_IMU_calib.lisp  ugv_msgs-msg.asd
Tu_ws/devel/share/gennodejs/ros/ugv_msgs/msg/: GPS.js  IMU.js  (+3 more)
Tu_ws/devel/share/roseus/ros/ugv_msgs/: manifest.l
Tu_ws/devel/share/tracking/cmake/: trackingConfig.cmake
Tu_ws/devel/share/ugv_msgs/cmake/: ugv_msgs-msg-extras.cmake  ugv_msgs-msg-paths.cmake  ugv_msgsConfig.cmake
Tu_ws/src/calib_imu/: CMakeLists.txt  package.xml
Tu_ws/src/calib_imu/src/: calib_IMU.cpp
Tu_ws/src/tracking/: CMakeLists.txt  package.xml
Tu_ws/src/tracking/include/: LQR.h  MPC.h  trajectory_path.h
Tu_ws/src/tracking/launch/: tracking.launch
Tu_ws/src/tracking/src/: GPS_node.cpp  IMU_node.cpp  LQR.cpp  MPC.cpp  controller_node.cpp  trajectory_path.cpp
Tu_ws/src/ugv_msgs/: CMakeLists.txt  package.xml
Tu_ws/src/ugv_msgs/msg/: IMU_calib.msg  toUGV.msg
(+4 files in other folders)
