<?xml version="1.0"?>
<package format="2">
  <name>gui_calib_imu</name>
  <version>0.1.0</version>
  <description>The gui package</description>
  <maintainer email="legopro@gmail.com">legopro</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>sensor_msgs</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>ugv_msgs</build_depend>
  <!-- <build_depend>ugv_msgs</build_depend> -->

  <build_export_depend>roscpp</build_export_depend>
  <!-- <build_export_depend>sensor_msgs</build_export_depend> -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ugv_msgs</build_export_depend>
  <!-- <build_export_depend>ugv_msgs</build_export_depend> -->

  <exec_depend>roscpp</exec_depend>
  <!-- <exec_depend>sensor_msgs</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ugv_msgs</exec_depend>
  <!-- <exec_depend>ugv_msgs</exec_depend> -->
</package>
